<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CP2</string>
    <string name="cadastro_title">Cadastro</string>
    <string name="input_nome">Nome</string>
    <string name="input_email">E-mail</string>
    <string name="input_telefone">Telefone</string>
    <string name="input_endereco">Endereço</string>
    <string name="input_idade">Idade</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="error_message">Preencha todos os campos</string>
    <string name="lista_title">Lista de Registros</string>
    <string name="button_delete">Deletar</string>
    <string name="button_update">Atualizar</string>
    <string name="delete_message">Registro deletado</string>
    <string name="update_message">Funcionalidade de atualização em breve</string>
</resources>